adl-frontend/src/test/resources/unit/error/syntactic/Primitive1.adl
priitive Primitive1 { 
	source my.c;	
}